--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,20 +15,21 @@ environment {
         appIcon "@mipmap/ic_launcher"
         appName "@string/app_name"
         versionName "1.0.0"
-        variables APK_BUILD_TYPE: "release"
+        variable "APK_BUILD_TYPE", "release"
     }
 
     devConfig {
         appIcon "@mipmap/ic_launcher"
         appName "@string/app_name"
         versionName "1.0.0.0"
-        variables APK_BUILD_TYPE: "test"
+        variable "APK_BUILD_TYPE", "test"
     }
 
     releaseEnv {
         alias "生产"
 
         variable "API_BASE_URL", "https://iyx-smart-api.intelliyx.com"
+        variable 'SPLASH_THEME', "AppTheme.Common.Activity.SplashUser"
     }
 
     testEnv {
@@ -51,7 +52,7 @@ android {
     defaultConfig {
         applicationId packageName
         minSdkVersion 17
-        targetSdkVersion 29
+        targetSdkVersion 26
         versionCode environment.versionCode
         versionName environment.versionName
 
@@ -135,13 +136,13 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     //自定义相册、图片视频预览库。
-    implementation 'com.github.kelinZhou:PhotoSelector:0.9.2'
+    implementation 'com.github.kelinZhou:PhotoSelector:1.0.0'
     //动态权限
     implementation 'com.github.kelinZhou:OkPermission:3.1.3'
     //安装包升级库
-    implementation 'com.github.kelinZhou:ApkUpdater:3.0.3'
+    implementation 'com.github.kelinZhou:ApkUpdater:3.0.4'
     //轮播图
-    implementation 'com.github.kelinZhou:Banner:2.7.0'
+    implementation 'com.github.kelinZhou:Banner:2.7.1'
     //事件总线
     implementation 'org.greenrobot:eventbus:3.1.1'
 
