--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     //RxJava
     api "io.reactivex.rxjava2:rxjava:2.2.5"
     api "io.reactivex.rxjava2:rxandroid:2.1.0"
+    api 'com.google.code.gson:gson:2.8.5'
 }
